<resources>
    <string name="app_name">QuipSwap</string>
    <string name="profile">Profile</string>
    <string name="you_are_not_signed_in">You are not signed in.</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_a_user">Not a user?</string>
    <string name="register">Register</string>
    <string name="log_out">Log Out</string>
    <string name="usernameColon">Username</string>
    <string name="new_quip">New Quip</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="about_us_text">QuipSwap was created by Malik Endsley in order to improve at programming. </string>
    <string name="about_us_text2">Questions? Comments? Want to hire me? Send me an email or connect on LinkedIn.</string>
    <string name="requests">Requests</string>
    <string name="back">Back</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="you_have_no_pending_friend_requests">You have no pending friend requests.</string>
    <string name="friends">Friends</string>
    <string name="add">Add</string>
    <string name="enter_username">Enter username</string>
    <string name="app_widget_description">Show the most recent Quip sent to you!</string>
    <string name="quip_swap">Quip Swap</string>
    <string name="select_which_friend">Select which friend whose quips you would like to see in this widget.</string>
    <string name="cancel">Cancel</string>
    <string name="select_source">Select Source</string>
    <string name="loading">Loading…</string>
    <string name="deny">Deny</string>
    <string name="accept">Accept</string>
    <string name="sent_swaps">Sent Swaps</string>
    <string name="noSwapsSentFlavor">You haven\'t sent any swaps. Click the + icon to get started!</string>
    <string name="received_swaps">Received Swaps</string>
    <string name="noReceivedSwapsFlavor">You haven\'t received any swaps. Ask your friends to send you some!</string>
    <string name="set_the_pen_to_red">Set the pen to Red</string>
    <string name="set_the_pen_to_orange">Set the pen to Orange</string>
    <string name="set_the_pen_to_yellow">Set the pen to Yellow</string>
    <string name="set_the_pen_to_green">Set the pen to Green</string>
    <string name="set_the_pen_to_blue">Set the pen to Blue</string>
    <string name="set_the_pen_to_purple">Set the pen to Purple</string>
    <string name="pen_size">Pen Size</string>
    <string name="share">Share Quip</string>
    <string name="save">Save</string>
    <string name="clear_canvas">Clear</string>
    <string name="soft">Soft</string>
    <string name="erase">Erase</string>
    <string name="help">Help</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="hard">Hard</string>
    <string name="email_me">Email Me</string>
    <string name="linkedin">LinkedIn</string>
    <string name="title_activity_settings">Settings</string>
    <string name="update_summary">Widgets should update themselves %s. Note that updating frequently takes more battery.</string>
    <string name="quip_quality_summary">Quality of Quips saved to disk. 0 is high compression and 100 is none.</string>
    <string name="savedQuipQuality">Saved Quip Quality</string>
    <string name="UpdateFrequency">Update Frequency</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="legal">Legal</string>
    <string name="to_view_our_privacy_policy_click_the_button_below">To view our privacy policy, click the button below.</string>
    <string name="for_data_related_inquiries_such_as_to_request_the_deletion_of_your_account_click_the_button_below">For data-related inquiries, such as to request the deletion of your account, click the button below.</string>
    <string name="data_inquiry">Data Inquiry</string>
    <string name="title">Title</string>
    <string name="change_the_size_of_the_brush">Change the size of the brush</string>
    <string name="close_this_tutorial_bubble">Close this tutorial bubble</string>
    <string name="tutorial_bubble">Tutorial bubble</string>
    <string name="a_list_of_your_received_quips">A list of your received Quips</string>
    <string name="a_list_of_your_sent_quips">A list of your sent Quips</string>
</resources>