<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/friendRequestsAppBar"
        android:icon="@drawable/ic_baseline_notifications_none_24"
        android:title="@string/requests"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mainHelpOption"
        android:title="@string/help"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_help_outline_24">
    </item>

    <item
        android:id="@+id/aboutUsOption"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/legalOption"
        android:title="@string/legal"
        app:showAsAction="never" />

    <item
        android:id="@+id/settingsOption"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/logoutOption"
        android:title="@string/log_out"
        android:visible="false"
        app:showAsAction="never" />
</menu>