<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="General">

        <DropDownPreference
            android:defaultValue="1"
            android:entries="@array/update_frequencies"
            android:entryValues="@array/update_frequencies_values"
            android:key="pref_update_frequency"
            android:title="@string/UpdateFrequency"
            app:iconSpaceReserved="false"
            app:summary="@string/update_summary" />

        <SeekBarPreference
            android:defaultValue="100"
            android:max="100"
            android:selectable="false"
            app:iconSpaceReserved="false"
            app:key="pref_quip_quality"
            app:min="0"
            app:showSeekBarValue="true"
            app:summary="@string/quip_quality_summary"
            app:title="@string/savedQuipQuality"
            app:updatesContinuously="true" />

    </PreferenceCategory>

</PreferenceScreen>