<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_700"
    android:maxWidth="200dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:src="@drawable/ic_app_logo" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorOnPrimary"
        android:maxWidth="200dp"
        android:padding="8dp"
        android:text="@string/about_us_text"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorOnPrimary"
        android:padding="8dp"
        android:text="@string/about_us_text2"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorOnPrimary">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/emailMeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:text="@string/email_me" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/linkedInButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:text="@string/linkedin" />
    </LinearLayout>

</LinearLayout>