<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_700"
    android:maxWidth="200dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:src="@drawable/ic_app_logo" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorOnPrimary"
        android:maxWidth="200dp"
        android:padding="8dp"
        android:text="@string/to_view_our_privacy_policy_click_the_button_below"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorOnPrimary"
        android:gravity="center">

        <Button
            android:id="@+id/privacyPolicyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorOnPrimary"
        android:padding="8dp"
        android:text="@string/for_data_related_inquiries_such_as_to_request_the_deletion_of_your_account_click_the_button_below"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorOnPrimary"
        android:gravity="center">

        <Button
            android:id="@+id/dataInquiryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_inquiry" />
    </LinearLayout>
</LinearLayout>