<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/profileBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/profileText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="37dp"
                android:text="@string/profile"
                android:textSize="48sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="@string/you_are_not_signed_in" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileBlock"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/signupEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="60dp"
                android:layout_marginVertical="10dp"
                android:autofillHints="emailAddress"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:minEms="10"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/signUpPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="60dp"
                android:layout_marginVertical="10dp"
                android:autofillHints="password"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:minEms="10"
                android:textColorHint="#757575" />

            <Button
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="60dp"
                android:layout_marginVertical="10dp"
                android:elegantTextHeight="true"
                android:maxLines="1"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/notAUserFlavor"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight=".75"
                android:gravity="center"
                android:text="@string/not_a_user" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="60dp"
                android:layout_marginVertical="10dp"
                android:elegantTextHeight="true"
                android:maxLines="1"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textSize="16sp" />


        </LinearLayout>
    </RelativeLayout>
</ScrollView>
