<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MakeQuipActivity">

    <LinearLayout
        android:id="@+id/canvasGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <com.malikendsley.fingerpainting.PaintView
            android:id="@+id/paintView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_weight="1" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/canvasGroup">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/redButton"
                    style="@style/Widget.Material3.MaterialTimePicker.ImageButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/line_selector"
                    android:contentDescription="@string/set_the_pen_to_red"
                    android:src="@color/Red" />

                <ImageButton
                    android:id="@+id/orangeButton"
                    style="@style/Widget.Material3.MaterialTimePicker.ImageButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/line_selector"
                    android:contentDescription="@string/set_the_pen_to_orange"
                    android:src="@color/Orange" />

                <ImageButton
                    android:id="@+id/yellowButton"
                    style="@style/Widget.Material3.MaterialTimePicker.ImageButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/line_selector"
                    android:contentDescription="@string/set_the_pen_to_yellow"
                    android:src="@color/Yellow" />

                <ImageButton
                    android:id="@+id/greenButton"
                    style="@style/Widget.Material3.MaterialTimePicker.ImageButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/line_selector"
                    android:contentDescription="@string/set_the_pen_to_green"
                    android:src="@color/Green" />

                <ImageButton
                    android:id="@+id/blueButton"
                    style="@style/Widget.Material3.MaterialTimePicker.ImageButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/line_selector"
                    android:contentDescription="@string/set_the_pen_to_blue"
                    android:src="@color/Blue" />

                <ImageButton
                    android:id="@+id/purpleButton"
                    style="@style/Widget.Material3.MaterialTimePicker.ImageButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/line_selector"
                    android:contentDescription="@string/set_the_pen_to_purple"
                    android:src="@color/purple_500" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:text="@string/pen_size"
                    android:textSize="18sp" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/penSizeSlider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/change_the_size_of_the_brush"
                    android:value="50"
                    android:valueFrom="0"
                    android:valueTo="100" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/brushStyleToggleGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:checkedButton="@id/normalButton"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/normalButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/hard"
                    app:icon="@drawable/ic_baseline_circle_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/blurButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/soft"
                    app:icon="@drawable/ic_baseline_lens_blur_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/eraserButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/erase"
                    app:icon="@drawable/eraser" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/undoButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:text="@string/undo"
                    app:icon="@drawable/ic_baseline_undo_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/redoButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:text="@string/redo"
                    app:icon="@drawable/ic_baseline_redo_24" />
            </LinearLayout>
            <!--
            <Button
                style="bu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="Choose Image..." />
                -->
        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="vertical">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/canvasClearButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear_canvas" />

            <Button
                android:id="@+id/saveButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/shareButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/share"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>