<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="horizontal"
    android:padding="8dp"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    app:cardElevation="@dimen/cardview_default_elevation">

    <LinearLayout
        android:id="@+id/rowLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usernameColon"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/requestUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/loading" />
        </LinearLayout>

        <View style="@style/horizontal_divider" />

        <LinearLayout
            android:id="@+id/expandingRequestMenu"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/denyFriendButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_weight="1"
                android:text="@string/deny"
                android:textSize="18sp" />

            <View style="@style/vertical_divider" />

            <Button
                android:id="@+id/acceptFriendButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_weight="1"
                android:text="@string/accept"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>