<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/profileText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/sign_up"
        android:textSize="48sp" />

    <EditText
        android:id="@+id/signUpUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/signupEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signupEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:elegantTextHeight="true"
        android:maxLines="1"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="16sp" />


</RelativeLayout>

