<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/requestsTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/friend_requests"
        android:textSize="30sp" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/FRGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/requestsTitleText"
        android:layout_margin="8dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/noPendingRequestsFlavor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/you_have_no_pending_friend_requests"
        android:textSize="16sp"
        android:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/requestList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/friendRequestsBackButton"
        android:layout_below="@id/FRGuideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/friendRequestsBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:text="@string/back" />

</RelativeLayout>